<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_7"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_8"
        android:textSize="25sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_9"
        android:textSize="25sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/sub"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_4"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_5"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_6"
        android:textSize="25sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btnmul"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/mul"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnsub"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_1"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_2"
        android:textSize="25sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_3"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/div"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btnmul"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/btneq"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/equal"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/_0"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@+id/btneq"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btndot"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/dot"
        android:textSize="25sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toEndOf="@+id/btndot"
        app:layout_constraintTop_toBottomOf="@+id/btndiv"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="145dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/clear"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnclearall"
        android:layout_width="145dp"
        android:layout_height="70dp"
        android:background="@drawable/btnstyle"
        android:padding="10dp"
        android:text="@string/clearall"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@id/btnclear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/result"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:text="@string/result"
        android:textSize="35sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnclear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <TextView
        android:id="@+id/input"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:text="@string/input"
        android:textSize="35sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

</androidx.constraintlayout.widget.ConstraintLayout>